[package]
name = "median-filter"
version = "0.1.0"
authors = ["Aaron Kofsky <aaronko@umich.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vst = "0.2.1"
log = "0.4.11"
simple-logging = "2.0.2"
variant_count = "1.0.0"
median = "0.3.1"

[lib]
crate-type = ["cdylib"]
