[package]
name = "median-filter"
version = "0.1.0"
authors = ["Aaron Kofsky <aaronko@umich.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vst = { git = "https://github.com/RustAudio/vst-rs" }
common = { path = "../common" }
median = "0.3.1"

[lib]
crate-type = ["cdylib"]
